--- a/i18n/ru.json
+++ b/i18n/ru.json
@@ -1,12 +1,116 @@
 {
   "header": {
-    "name": "mur",
     "links": {
-      "About": "About us",
-      "Affiliates": "Affiliates",
-      "Advertisers": "Advertisers",
-      "Reviews": "Reviews",
-      "Partners": "our Partners"
+      "About": "О нас",
+      "Affiliates": "Аффилиаты",
+      "Advertisers": "Рекламодатели",
+      "Reviews": "Отзывы",
+      "Partners": "партнеры"
+    },
+    "buttons": {
+      "auth": "вход",
+      "registration": "Регистрация",
+      "account": "аккаунт",
+      "close": "Закрыть"
+    }
+  },
+  "start": {
+    "label": "Международная<br>Партнерская Сеть",
+    "description": "Космическая навигация от прямых<br> офферов к росту наших партнёров"
+  },
+  "role": {
+    "title": "Выберите <br>свою роль",
+    "affiliate": "Я <br>Аффилиат",
+    "advertiser": "Я  рекламо<br>датель"
+  },
+  "about": {
+    "tip": "О нас",
+    "title": "Наша партнерская СРА сеть создана профессионалами с более чем <span>10 лет опыта</span> в аффилейт маркетинге",
+    "rows": {
+      "one": {
+        "left": "Прямые офферы",
+        "right": "Проверенные партнеры"
+      },
+      "two": {
+        "left": "Вертикали",
+        "right": "Гемблинг, Беттинг, Финтех"
+      },
+      "three": {
+        "left": "Модели оплаты",
+        "right": "СРА, Гибрид, Ревшара"
+      },
+      "four": {
+        "left": "Круглосуточная поддержка"
+      }
+    },
+    "label": "Не стесняйтесь!<br>создайте акк"
+  },
+  "affiliates": {
+    "title": "Аффилиаты",
+    "items": {
+      "1": "Предложения и промокоды от партнеров",
+      "2": "Надежные агентские аккаунты в аренду",
+      "3": "Прозрачная статистика и удобный партнерский аккаунт",
+      "4": "Пожизненная реферальная программа",
+      "5": "Быстрая и полная поддержка от персонального менеджера",
+      "6": "Выплаты до 2 раз в месяц удобным способом",
+      "7": "Только прямые рекламодатели"
+    },
+    "link": "Become an advertiser",
+    "description": "Зарегистрируйтесь и получите доступ к 500+ офферам"
+  },
+  "advertisers": {
+    "title": "Рекламодатели",
+    "items": {
+      "1": "Прозрачная коммуникация и честная обратная связь",
+      "2": "Проверенные вебмастера",
+      "3": "Быстрый запуск и простая интеграция",
+      "4": "Качественные источники трафика:",
+      "4-additional": "Social, Google UAC + PPC, ASO, premium in-app, другие",
+      "5": "Любые страны по всему миру",
+      "6": "Современная антифрод система"
+    },
+    "link": "Стать рекламодателем",
+    "description": "Свяжитесь с нами и получите больше платящих клиентов "
+  },
+  "reviews": {
+    "title": "Отзывы",
+    "description": "Что говорят наши партнеры о работе с нами",
+    "items": {
+      "1": {
+        "text": "Имеем позитивный опыт работы с ORION Partners!) Интеграция прошла оперативно, вопросов с выплатами не было, общение было дружелюбным и легким\uD83D\uDE42",
+        "name": "алексей <br>руководитель арбитражной команды"
+      },
+      "2": {
+        "text": "Работаем с ребятами давно, никогда не было проблем. Быстрые сверки, выплаты четко по графику, профессиональная поддержка от менеджеров - есть всё, что хочется видеть от хорошей партнерки. Поэтому с уверенностью можем посоветовать ORION Partners как надежного и стабильного партнера : )",
+        "name": "Степан<br>руководитель арбитражной команды"
+      },
+      "3": {
+        "text": "ORION Partners классные ребята!! Их менеджеры всегда готовы обсудить повышение ставок и добавить любой оффер, даже если его ранее у них не было. Всегда своевременные выплаты. Эта гибкость и активный подход однозначно подкупают.",
+        "name": "Екатерина<br>аффилейт менеджер"
+      },
+      "4": {
+        "text": "Работаю с ORION Partners уже не первый месяц. Поддержка на высшем уровне, всегда быстрая и эффективная. Своевременные выплаты подчеркивают их надежность. Очень рекомендую ORION Partners за их опыт и профессионализм!",
+        "name": "Семен<br>аффилейт менеджер"
+      },
+      "5": {
+        "text": "У меня только позитивный опыт с ORION Partners. Ребята настолько дружелюбны, что мы постоянно обмениваемся опытом, делая сотрудничество не просто бизнесом, а взаимовыгодным сотрудничеством по формуле win-win.",
+        "name": "Виталий<br>руководитель арбитражной команды Gekkoo"
+      }
+    }
+  },
+  "partners": "наши партнеры",
+  "questions": {
+    "title": "Есть вопросы?",
+    "description": "Свяжитесь с нашей командой!",
+    "placeholders": {
+      "name": "Имя",
+      "mail": "E-mail",
+      "message": "Сообщение",
+      "required": "ОБЯЗАТЕЛЬНОЕ ПОЛЕ",
+      "button": "Отправить сообщение",
+      "thanks": "Спасибо! Мы свяжемся с вами в ближайшее время",
+      "error": "Ошибка сервера, сообщение не отправлено, попробуйте еще раз"
     }
   }
 }
