--- a/i18n/en.json
+++ b/i18n/en.json
@@ -91,7 +91,7 @@
       },
       "4": {
         "text": "I've been working with ORION Partners for several months now. The support is top-notch, always fast and effective. Timely payouts emphasize their reliability. Highly recommend ORION Partners for their experience and professionalism!",
-        "name": "Semen <br>Affiliate-manager"
+        "name": "Semyon <br>Affiliate-manager"
       },
       "5": {
         "text": "I only have a positive experience with ORION Partners. The guys are so friendly that we constantly exchange experiences, making our collaboration not just business but a mutually beneficial partnership based on the win-win formula.",
