--- a/i18n/ru.json
+++ b/i18n/ru.json
@@ -112,5 +112,45 @@
       "thanks": "Спасибо! Мы свяжемся с вами в ближайшее время",
       "error": "Ошибка сервера, сообщение не отправлено, попробуйте еще раз"
     }
+  },
+  "dialog": {
+    "auth": {
+      "title": "Вход",
+      "forgot": "Забыли пароль?",
+      "no-account": "У вас нет аккаунта?",
+      "button": "Вход",
+      "partner": "Регистрация партнера",
+      "advertiser": "Регистрация рекламодателя"
+    },
+    "placeholders": {
+      "mail": "Эл. почта",
+      "password": "Пароль",
+      "error": "Ошибка сервера, попробуйте еще раз",
+      "firstName": "Имя",
+      "lastName": "Фамилия",
+      "repeatPassword": "Подтверждение пароля",
+      "company": "Компания",
+      "telegram": "Telegram"
+    },
+    "errors": {
+      "required": "Обязательное поле",
+      "password": "Пароли не совпадают",
+      "passwordLength": "Пароль должен состоять не менее чем из 8 символов",
+      "passwordSpecial": "Пароль должен состоять не менее чем из 8 символов и содержать не менее 1 прописной и строчной буквы, цифры и специальные символы."
+    },
+    "affiliate": {
+      "title": "Регистрация партнера",
+      "button": "Регистрация",
+      "terms": "Согласен с <a href='/terms' target='_blanc'>условиями использования</a>",
+      "policy": "Согласен с <a href='/policy' target='_blanc'>политикой конфиденциальности</a>",
+      "already": "Уже есть аккаунт?"
+    },
+    "advertiser": {
+      "title": "Регистрация рекламодателя",
+      "button": "Регистрация",
+      "terms": "Согласен с <a href='/terms' target='_blanc'>условиями использования</a>",
+      "policy": "Согласен с <a href='/policy' target='_blanc'>политикой конфиденциальности</a>",
+      "already": "Уже есть аккаунт?"
+    }
   }
 }
