--- a/i18n/ru.json
+++ b/i18n/ru.json
@@ -151,6 +151,7 @@
       "terms": "Согласен с <a href='/terms' target='_blanc'>условиями использования</a>",
       "policy": "Согласен с <a href='/policy' target='_blanc'>политикой конфиденциальности</a>",
       "already": "Уже есть аккаунт?"
-    }
+    },
+    "success": "Спасибо за регистрацию! Для завершения, проверьте вашу почту и пройдите верификацию по ссылке. Это нужно для подтверждения вашей электронной почты."
   }
 }
