--- a/i18n/ru.json
+++ b/i18n/ru.json
@@ -126,6 +126,8 @@
       "mail": "Эл. почта",
       "password": "Пароль",
       "error": "Ошибка сервера, попробуйте еще раз",
+      "emailError": "Электронная почта уже занята",
+      "loginError": "Неверный адрес эл. почты или пароль",
       "firstName": "Имя",
       "lastName": "Фамилия",
       "repeatPassword": "Подтверждение пароля",
